--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <div id="big">
         <div id="nav-menu">
             <div>
-                <!-- <img src="./images/logo/Screenshot (8).png" alt=""> -->
-                <h1 style="color: white;">Om Prakash Mishra</h1>
+              
+                <h1 style="color: rgb(110, 27, 110);"><i>Om Prakash Mishra</i></h1>
             </div>
             <div>
                 <a href="#home">
                     <p  class="nav-link home">HOME</p>
                 </a>
                 <a href="#about">
-                    <p class="nav-link about">ABOUT</p>
+                    <p class="nav-link about">About</p>
                 </a>
                 <a href="#skills">
                     <p  class="nav-link skills">SKILLS</p>
