--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <p  class="nav-link home">HOME</p>
                 </a>
                 <a href="#about">
-                    <p class="nav-link about">About</p>
+                    <p class="nav-link about">ABOUT</p>
                 </a>
                 <a href="#skills">
                     <p  class="nav-link skills">SKILLS</p>
@@ -91,6 +91,9 @@
     </div>
 </div>
 
+
+
+
 <div class="box">
     <div></div>
     <div></div>
@@ -108,7 +111,7 @@
 
 <div id="about"   class="about section" >
     <div class="about_section">
-        <div  id="about.about.section" ><h1 >ABOUT ME</h1></div>
+        <div  id="#about.about.section" ><h1 >ABOUT ME</h1></div>
         <div id="user-detail-intro" class="about section minabsec">
             <p >A Dedicated full-stack web
                 developer who is always
@@ -243,7 +246,7 @@
                     <p  class="project-description"><span>Lose it</span>  Furiture design is a specialized field that combines utility and style. Furniture is considered by many interior designers to be one of the most significant parts of any interior space. It adds not only functionality and utility to a space, but also style and personality</p>
                     <p><span>Features:</span> Home Page, Profile page ,Login/signup Page,landing page ,Calories Page etc. along with full responsiveness.</p>
                     <p class="project-tech-stack"><span>Tech Stack:</span>HTML,CSS and JavaScript</p>
-                    <a href="https://super-jalebi-b4e97f.netlify.app/furniture.html" target="_blank">
+                    <a href="https://super-jalebi-b4e97f.netlify.app/" target="_blank">
                     <button class="project-deployed-link">
                         <img src="./images/shuttle.png" alt="">
                         Go Live
@@ -368,10 +371,7 @@
         </div>
     </div>
 </div>
-<!-- <div class="calendar">
-     Loading stuff 
-   
-</div> -->
+
 </body>
 </html>
 
