--- a/intro.html
+++ b/intro.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style/index.css">
     <link rel="stylesheet" href="./style/intro.css">
     <link rel="stylesheet" href="./bganm.css">
-    <title>Prashant </title>
+    <title>Om Prakash  Mishra </title>
 </head>
 <body>
     <div class="container">
