--- a/index.html
+++ b/index.html
@@ -356,17 +356,17 @@
 
     <div>
         <div  >
-            <img id="github-top-langs" src="https://github-readme-stats.vercel.app/api/top-langs/?username=golugauraw1&lans-count=4" alt="">
+            <img id="github-top-langs" src="https://github-readme-stats.vercel.app/api/top-langs/?username=omp12345&lans-count=4" alt="">
         </div>
         <div  >
-            <img id="github-stats-card" src="https://github-readme-stats.vercel.app/api?username=golugauraw1&show_icons=true&locale=en" alt="">
+            <img id="github-stats-card" src="https://github-readme-stats.vercel.app/api?username=omp12345&show_icons=true&locale=en" alt="">
         </div>
         <div >
-            <img id="github-streak-stats" src="https://github-readme-streak-stats.herokuapp.com/?user=golugauraw1&" alt="">
+            <img id="github-streak-stats" src="https://github-readme-streak-stats.herokuapp.com/?user=omp12345&" alt="">
         </div>
         
         <div class="react-activity-calendar">
-            <img id="github-streak-stats" src="https://ghchart.rshah.org/golugauraw1" alt="">
+            <img id="github-streak-stats" src="https://ghchart.rshah.org/omp12345" alt="">
         </div>
         </div>
     </div>
