--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <P class="nav-link contact">CONTACT</P>
                 </a> 
 
-                <a href="./fw21_1111-Golu-Gauraw-Resume.pdf" download="fw21_0965-Om-Prakash-Resume" id="navResume" >
+                <a href="./Om-Prakash-Mishra-Resume.pdf" download="fw21_0965-Om-Prakash-Resume" id="navResume" >
                     <button class="nav-link resume"  id="resume-button-1">
                         <img src="./images/download (3).png" alt="">
                         Resume
@@ -163,7 +163,7 @@
     </div>
     <div class="skills-card" >
         <img  class="skills-card-img" src="./images/nodejs.png" alt="">
-        <h3 class="skills-card-name">NodeJS</h3>
+        <h3 class="skills-card-name">NodejS</h3>
     </div>
     <div class="skills-card" >
         <img  class="skills-card-img" src="./images/expressJs.png" alt="">
