--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     </div>
     <div class="skills-card" >
         <img  class="skills-card-img" src="./images/nodejs.png" alt="">
-        <h3 class="skills-card-name">NodejS</h3>
+        <h3 class="skills-card-name">NodeJS</h3>
     </div>
     <div class="skills-card" >
         <img  class="skills-card-img" src="./images/expressJs.png" alt="">
