--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <P class="nav-link contact">CONTACT</P>
                 </a> 
 
-                <a href="./Om-Prakash-Mishra-Resume.pdf" download="fw21_0965-Om-Prakash-Resume" id="navResume" >
+                <a href="./Om-Prakash-Mishra-Resume.pdf" download="fw21_0965-Om-Prakash-Resume" id="resume-link-1" >
                     <button class="nav-link resume"  id="resume-button-1">
                         <img src="./images/download (3).png" alt="">
                         Resume
@@ -125,8 +125,8 @@
                 </p>
         </div>
         <div>
-            <a href="./Om-Prakash-Mishra-Resume.pdf" download="fw21_0965-Om-Prakash-Mishra" id="aboutResumepdf">
-                <button >
+            <a href="./Om-Prakash-Mishra-Resume.pdf" download="fw21_0965-Om-Prakash-Mishra" id="resume-link-2">
+                <button id="resume-button-2" >
                     <img src="./download (1).png" alt="">
                     Resume
                 </button>
