--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <P class="nav-link contact">CONTACT</P>
                 </a> 
 
-                <a href="./Om-Prakash-Mishra-Resume.pdf" download="fw21_0965-Om-Prakash-Resume" id="resume-link-1" >
+                <a href="./Om-Prakash-Mishra-Resume.pdf" download="fw21_0965-Om-Prakash-Resume" id="navResume" id="resume-link-1" >
                     <button class="nav-link resume"  id="resume-button-1">
                         <img src="./images/download (3).png" alt="">
                         Resume
@@ -80,7 +80,7 @@
                 <div class="about_a" id="user-detail-intro">Full-Stack Developer</div>
                 <div class="aboutmore"></div>
                 <div class="buttons">
-                    <a href="./Om-Prakash-Mishra-Resume.pdf" download="fw21_0965-Om-Prakash-Resume" id="homeBtndiv">
+                    <a href="./Om-Prakash-Mishra-Resume.pdf" download="fw21_0965-Om-Prakash-Resume" id="resume-link-2" id="homeBtndiv">
                     <button  id="resume-button-2" >Download cv</button></a>
                     <a href="contact.html"><button>Contact Me</button></a>
                     
@@ -125,8 +125,8 @@
                 </p>
         </div>
         <div>
-            <a href="./Om-Prakash-Mishra-Resume.pdf" download="fw21_0965-Om-Prakash-Mishra" id="resume-link-2">
-                <button id="resume-button-2" >
+            <a href="./Om-Prakash-Mishra-Resume.pdf" download="fw21_0965-Om-Prakash-Mishra" id="resume-link-2" id="aboutResumepdf">
+                <button id="resume-button-2">
                     <img src="./download (1).png" alt="">
                     Resume
                 </button>
