--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                 <div class="about_a" id="user-detail-intro">Full-Stack Developer</div>
                 <div class="aboutmore"></div>
                 <div class="buttons">
-                    <a href="./Om-Prakash-Mishra-Resume.pdf" download="fw21_0965-Om-Prakash-Resume"  id="homeBtndiv">
-                    <button  id="resume-button-2" >Download cv</button></a>
+                    <a href="./Om-Prakash-Mishra-Resume.pdf" download="fw21_0965-Om-Prakash-Resume"  id="resume-link-2">
+                    <button  >Download cv</button></a>
                     <a href="contact.html"><button>Contact Me</button></a>
                     
                 </div>
@@ -125,8 +125,8 @@
                 </p>
         </div>
         <div>
-            <a href="./Om-Prakash-Mishra-Resume.pdf" download="fw21_0965-Om-Prakash-Mishra"  id="aboutResumepdf">
-                <button id="resume-button-2">
+            <a href="./Om-Prakash-Mishra-Resume.pdf" download="fw21_0965-Om-Prakash-Mishra"  id="resume-link-2">
+                <button >
                     <img src="./download (1).png" alt="">
                     Resume
                 </button>
