--- a/index.html
+++ b/index.html
@@ -149,27 +149,27 @@
         <h1>Skills</h1>
     </div>
 <div class="lang">
-    <div class="skills-card" >
+    <div id="1" class="skills-card" >
         <img  class="skills-card-img" src="./html.png" alt="">
         <h3 class="skills-card-name">HTML</h3>
     </div>
-    <div class="skills-card" >
+    <div id="2" class="skills-card" >
         <img  class="skills-card-img" src="./images/tools_img/css.png" alt="">
         <h3 class="skills-card-name">CSS</h3>
     </div>
-    <div class="skills-card" >
+    <div id="3" class="skills-card" >
         <img  class="skills-card-img" src="./images/tools_img/js.png" alt="">
         <h3 class="skills-card-name">JavaScript</h3>
     </div>
-    <div class="skills-card" >
+    <div id="4" class="skills-card" >
         <img  class="skills-card-img" src="./images/nodejs.png" alt="">
         <h3 class="skills-card-name">NodeJS</h3>
     </div>
-    <div class="skills-card" >
+    <div id="5" class="skills-card" >
         <img  class="skills-card-img" src="./images/expressJs.png" alt="">
         <h3 class="skills-card-name">ExpressJS</h3>
     </div>
-    <div class="skills-card" >
+    <div id="6" class="skills-card" >
         <img  class="skills-card-img" src="./images/mongodb.png" alt="">
         <h3 class="skills-card-name">MongoDB</h3>
     </div>
