--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
 
 </div>
 <div id="skills">
-    <div id="skills_tag">
+    <div id="skills" class="element">
         <h1>Skills</h1>
     </div>
-<div class="lang">
+<div class="lang" id="skills" >
     <div  class="skills-card" >
         <img  class="skills-card-img" src="./html.png" alt="">
         <h3 class="skills-card-name">HTML</h3>
