--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
                     <P class="nav-link contact">CONTACT</P>
                 </a> 
 
-                <a href="./Om-Prakash-Mishra-Resume.pdf" download="fw21_0965-Om-Prakash-Resume" id="navResume" id="resume-link-1" >
+                <a href="./Om-Prakash-Mishra-Resume.pdf" download="Om-Prakash-Mishra-Resume.pdf" id="navResume" id="resume-link-1" >
                     <button class="nav-link resume"  id="resume-button-1">
-                        <img src="./images/download (3).png" alt="">
+                        <img src="./images/download (3).png" alt=""> 
                         Resume
                     </button>
+                   
                 </a>
                 
             </div>
