--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
 
 </div>
 <div id="skills">
-    <div id="skills" class="element">
+    <div >
         <h1>Skills</h1>
     </div>
-<div class="lang" id="skills" >
+<div class="lang" >
     <div  class="skills-card" >
         <img  class="skills-card-img" src="./html.png" alt="">
         <h3 class="skills-card-name">HTML</h3>
