--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                 better and becoming integral
                 part of an organization that
                 help me grow.
+                MySQL, JDBC, Hibernate, Spring, JavaScript with proficiency in problem-solving. Looking forward to be an asset to any team, to learn, to grow and develop long-term
                 </p>
         </div>
         <div>
