--- a/index.html
+++ b/index.html
@@ -37,14 +37,11 @@
                     <P class="nav-link contact">CONTACT</P>
                 </a> 
 
-                <!-- <a href="./Om-Prakash-Mishra-Resume.pdf" download="Om-Prakash-Mishra-Resume.pdf" id="navResume" id="resume-link-1" >
+                <a href="./Om-Prakash-Mishra-Resume.pdf" download="Om-Prakash-Mishra-Resume.pdf" id="navResume" id="resume-link-1" >
                     <button class="nav-link resume"  id="resume-button-1">
                         <img src="./images/download (3).png" alt=""> 
                         Resume
-                    </button> -->
-                    <button  id="resume-button-2" class="btn" ><a id="resume-link-2" href="./images/Rajani-VC-Resumee.pdf" 
-                        download="./Rajani-VC-Resume.pdf"> 
-                        Resume <i class="fa fa-download"></i></a> </button>
+                    </button>
                    
                 </a>
                 
