--- a/index.html
+++ b/index.html
@@ -127,12 +127,13 @@
                 </p>
         </div>
         <div>
-            <a href="./Om-Prakash-Mishra-Resume.pdf" download="fw21_0965-Om-Prakash-Mishra"  id="aboutResumepdf">
+           
                 <button id="resume-button-2">
+                    <a href="./Om-Prakash-Mishra-Resume.pdf" download="fw21_0965-Om-Prakash-Mishra"  id="aboutResumepdf"></a>
                     <img src="./download (1).png" alt="">
                     Resume
                 </button>
-            </a>
+            
            <a href="https://github.com/omp12345" target="_blank">
             <button>
                 <img src="./github.png" alt="">
