--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <li  ><a href="#skills">Skills</a></li>
                 <li  ><a href="#projects">Project</a></li>
                 <li  ><a href="#contact">Contact me</a></li>
-                <li> <a href="./Om-Prakash-Mishra-Resume.pdf" download="fw21_0965-Om-Prakash-Resume" id="sideResume" >
+                <li> <a href="./Om-Prakash-Mishra-Resume.pdf" download="./Om-Prakash-Mishra-Resume.pdf" id="sideResume" >
                     <button >
                         <img src="./images/download (3).png" alt="">
                         Resume
@@ -87,8 +87,10 @@
                 <div class="aboutmore"></div>
                 <div class="buttons">
                    
-                    <button  id="resume-button-1" >
-                        <a href="./Om-Prakash-Mishra-Resume.pdf" download="./fw21_0965-Om-Prakash-Resume"  id="homeBtndiv"> Download cv </a>
+                    <button id="homeBtndiv">
+                        <a href="./Om-Prakash-Mishra-Resume.pdf" download="./fw21_0965-Om-Prakash-Mishra" id="resume-link-2" ></a>
+                        <img src="./download (1).png" alt="">
+                        Download cv
                     </button>
               
                     <a href="contact.html"><button>Contact Me</button></a>
@@ -131,7 +133,7 @@
                 better and becoming integral
                 part of an organization that
                 help me grow.
-                MySQL, JDBC, Hibernate, Spring, JavaScript with proficiency in problem-solving. Looking forward to be an asset to any team, to learn, to grow and develop long-term
+                NodeJS, MongoDB, JavaScript, React,  with proficiency in problem-solving. Looking forward to be an asset to any team, to learn, to grow and develop long-term
                 </p>
         </div>
         <div>
