--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                
                     <button class="nav-link resume"  id="resume-button-1">
-                        <a href="./Om-Prakash-Mishra-Resume.pdf" download="./Om-Prakash-Mishra-Resume.pdf"   > </a>
+                        <a href="./Om-Prakash-Mishra-Resume.pdf" download="./Om-Prakash-Mishra-Resume.pdf"  id="resume-link-1" > </a>
                         <img src="./images/download (3).png" alt=""> 
                         Resume
                     </button>
