--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="aboutmore"></div>
                 <div class="buttons">
                    
-                    <button id="resume-button-2">
+                    <button id="homeBtndiv">
                         <a href="./Om-Prakash-Mishra-Resume.pdf" download="./Om-Prakash-Mishra-Resume.pdf" id="resume-link-2" ></a>
                        
                         Download cv
