--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <li  ><a href="#skills">Skills</a></li>
                 <li  ><a href="#projects">Project</a></li>
                 <li  ><a href="#contact">Contact me</a></li>
-                <li> <a href="./Om-Prakash-Mishra-Resume.pdf" download="./Om-Prakash-Mishra-Resume.pdf" id="sideResume" >
+                <li> <a href="./Om-Prakash-Mishra-Resume.pdf" download="./Om-Prakash-Mishra-Resume.pdf"  id="sideResume" >
                     <button >
                         <img src="./images/download (3).png" alt="">
                         Resume
@@ -310,17 +310,17 @@
             </div>
             <div>
                 <div>
-                    <h2 class="project-title">Appointment System</h2>
-                    <p  class="project-description"><span>Appointment System</span> It helps pateint to book a appontment from his local doctor</p>
-                    <p><span>Features:</span> Home Page, Pateint Page, Appointment Page,Admin Page,Login/Signup Page etc. along with full responsiveness.</p>
-                    <p class="project-tech-stack"><span>Tech Stack:</span>React, Nodejs, Express, MongoDB etc..</p>
-                   <a href="https://amazonn-black.vercel.app/" target="_blank">
+                    <h2 class="project-title">Maousam Jankari</h2>
+                    <p  class="project-description"><span>Maousam</span>This is the weather app </p>
+                    <p><span>Features:</span> allow loaction ge search functionality,</p>
+                    <p class="project-tech-stack"><span>Tech Stack:</span>React.js,css</p>
+                   <a href="https://polite-brioche-c93888.netlify.app/" target="_blank">
                     <button class="project-deployed-link">
-                        <img src="./images/shuttle.png" alt="">
+                        <img src="./" alt="">
                         Go Live
                     </button>
                    </a>
-                 <a href="https://github.com/Faheemw09/envious-cactus-6437" target="_blank" rel="noopener noreferrer">
+                 <a href="https://github.com/omp12345/Mousam_Jankari" target="_blank" rel="noopener noreferrer">
                     <button class="project-github-link" id="test3">
                         <img src="./github.png" alt="">
                         GitHub
