--- a/index.html
+++ b/index.html
@@ -306,13 +306,13 @@
     <div class="project-card">
         <div>
             <div>
-                <img src="./style.png" alt="">
+                <img src="./style/weather_app.png" alt="">
             </div>
             <div>
                 <div>
                     <h2 class="project-title">Maousam Jankari</h2>
-                    <p  class="project-description"><span>Maousam</span>This is the weather app </p>
-                    <p><span>Features:</span> allow loaction ge search functionality,</p>
+                    <p  class="project-description"><span>Check your  area weather status </span>This is the weather app </p>
+                    <p><span>Features:</span> allow loaction and search functionality,</p>
                     <p class="project-tech-stack"><span>Tech Stack:</span>React.js,css</p>
                    <a href="https://polite-brioche-c93888.netlify.app/" target="_blank">
                     <button class="project-deployed-link">
