--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     
                 </div>
             </div>
-            <div class="devpic" ><img src="./opm143-PhotoRoom.png" alt="P" class="home-img"></div>
+            <div class="devpic" ><img  src="https://avatars.githubusercontent.com/u/112754710?v=4" alt="P" class="home-img"></div>
         </div>
     </div>
 </div>
