--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <a class="nav-link contact" href="#contact">Contact</a>
       
       <li id="resume-button-1" class="nav-link resume">
-        <a href="Om-Prakash-Mishra-Resume.pdf" target="_blank" id="resume-link-1"
-          download="Om-Prakash-Mishra-Resume">Resume
+        <a href="OM-PRAKASH-MISHRA.pdf" target="_blank" id="resume-link-1"
+          download="OM-PRAKASH-MISHRA">Resume
           <i class='bx bxs-download'></i></a>
       </li>
 
@@ -81,8 +81,8 @@
       </div>
 
       <li id="resume-button-2">
-        <a href="Om-Prakash-Mishra-Resume.pdf" target="_blank" id="resume-link-2" class="button"
-          download="Om-Prakash-Mishra-Resume">Resume <i class='bx bxs-download'></i></a>
+        <a href="OM-PRAKASH-MISHRA.pdf" target="_blank" id="resume-link-2" class="button"
+          download="OM-PRAKASH-MISHRA">Resume <i class='bx bxs-download'></i></a>
       </li>
 
 
