--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <a class="nav-link contact" href="#contact">Contact</a>
       
       <li id="resume-button-1" class="nav-link resume">
-        <a href="OM-PRAKASH-MISHRA.pdf" target="_blank" id="resume-link-1"
+        <a class="a" href="OM-PRAKASH-MISHRA.pdf" target="_blank" id="resume-link-1"
           download="OM-PRAKASH-MISHRA">Resume
           <i class='bx bxs-download'></i></a>
       </li>
@@ -246,7 +246,7 @@
               src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg" width="32"
               height="32" loading="lazy" />
 
-            <p class="skills-card-name">Bootstrap </p>
+            <p class="skills-card-name">Bootstrap</p>
           </button>
         </li>
       </ul>
@@ -466,7 +466,7 @@
   <footer class="footer">
     <div class="footer-text">
 
-      <p> &thkap; Thank You for visting, have a great time &thkap;</p>
+      <p > &thkap; Thank You for visting, have a great time &thkap;</p>
     </div>
     <div class="footer-iconTop">
       <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
