--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
       <div class="project-card">
         <img  src="./homedcoere1.png" alt="">
         <div class="project-layer">
-          <h4 class="project-title">Be-Fit</h4>
+          <h4 class="project-title">HomeDecoration</h4>
           <p class="p1" class="project-description">You can find you daily home decoration thing like Furniture,pot,almirah all this thing .</p>
           <h5 class="project-tech-stack">HTML | CSS | JavaScript | React.Js</h5>
        
@@ -309,7 +309,7 @@
       <div class="project-card">
         <img width="100%" style="height: 250px;" src="./imdbpng.png" alt="">
         <div class="project-layer">
-          <h4 class="project-title">GESRBEST</h4>
+          <h4 class="project-title">Movie clone</h4>
           <p class="p1" class="project-description">This web app is clone of imdb movie clone where you can see all daily basic or weekly basic,and hightrating basci movie or Tv serial </p>
           <h5 class="project-tech-stack">HTML | SCSS | React.Js|redux|redux-toolkit|lazyloding</h5>
         <div class="flex_icon">
@@ -322,7 +322,7 @@
         </div>
       </div>
       <div class="project-card">
-        <img style="height: 250px;" width="100%" src="./amazonpng.png" alt="">
+        <img style="height: 250px;" width="100%" src="./amozonpng.png" alt="">
         <div class="project-layer">
           <h4 class="project-title">Amozon-clone</h4>
           <p class="p1" class="project-description">This is Amozon clone web app .where you can buy your acceseriose and other elctronics goods and daily basic things</p>
