--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </div>
 
     <div class="home-image">
-      <img class="home-img" src="./images/opimage.png" alt="profile-pic" />
+      <img class="home-img" src="https://scontent.flko9-2.fna.fbcdn.net/v/t39.30808-6/391385966_3280537588915651_8943247117231175650_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=5f2048&_nc_ohc=qauWcSL_KcAAX_ny88l&_nc_ht=scontent.flko9-2.fna&oh=00_AfAH9ET0U8TVyJdMaj-XkSbRZxP7p3ghfvQU6Bt59e79NQ&oe=65319118" alt="profile-pic" />
 
       <img src="./images/pattern-2.svg" width="27" height="26" alt="shape" class="shape shape-1" />
 
