--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     content="Hey Hii ! I'm Om Prakash Mishra & this is my portfolio profile, kindly go through my portfolio if you are a recruiter and looking for a passionate Full Stack Developer or Backend Developer  please feel free to contact me." />
 
   <!-- Github Calender -->
-  
   <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
 
   <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css" /><!-- 
@@ -90,7 +89,7 @@
     </div>
 
     <div class="home-image">
-      <img class="home-img" src="https://scontent.flko9-2.fna.fbcdn.net/v/t39.30808-6/391385966_3280537588915651_8943247117231175650_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=5f2048&_nc_ohc=qauWcSL_KcAAX_ny88l&_nc_ht=scontent.flko9-2.fna&oh=00_AfAH9ET0U8TVyJdMaj-XkSbRZxP7p3ghfvQU6Bt59e79NQ&oe=65319118" alt="profile-pic" />
+      <img class="home-img" src="./portImage.png" alt="profile-pic" />
 
       <img src="./images/pattern-2.svg" width="27" height="26" alt="shape" class="shape shape-1" />
 
@@ -292,7 +291,7 @@
       <div class="project-card">
         <img  src="./homedcoere1.png" alt="">
         <div class="project-layer">
-          <h4 class="project-title">HomeDecoration</h4>
+          <h4 class="project-title">Be-Fit</h4>
           <p class="p1" class="project-description">You can find you daily home decoration thing like Furniture,pot,almirah all this thing .</p>
           <h5 class="project-tech-stack">HTML | CSS | JavaScript | React.Js</h5>
        
@@ -310,7 +309,7 @@
       <div class="project-card">
         <img width="100%" style="height: 250px;" src="./imdbpng.png" alt="">
         <div class="project-layer">
-          <h4 class="project-title">Movie clone</h4>
+          <h4 class="project-title">GESRBEST</h4>
           <p class="p1" class="project-description">This web app is clone of imdb movie clone where you can see all daily basic or weekly basic,and hightrating basci movie or Tv serial </p>
           <h5 class="project-tech-stack">HTML | SCSS | React.Js|redux|redux-toolkit|lazyloding</h5>
         <div class="flex_icon">
@@ -323,7 +322,7 @@
         </div>
       </div>
       <div class="project-card">
-        <img style="height: 250px;" width="100%" src="./amozonpng.png" alt="">
+        <img style="height: 250px;" width="100%" src="./amazonpng.png" alt="">
         <div class="project-layer">
           <h4 class="project-title">Amozon-clone</h4>
           <p class="p1" class="project-description">This is Amozon clone web app .where you can buy your acceseriose and other elctronics goods and daily basic things</p>
@@ -457,6 +456,9 @@
     </div>
   </div>
 
+
+
+  
 
   <!--------------------------------------------  Contacts Ends --------------------------------------------------------------->
 
