--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
         <div class="stats">
           <a href="https://github.com/omp12345">
             <img   id="github-streak-stats"
-              src="https://github-readme-streak-stats.herokuapp.com/?user=omp12345&theme=black-ice&hide_border=true&stroke=0000&background=060A0CD0"
+              src="https://camo.githubusercontent.com/50232440275defdcb7cb60f68f105b7d5d72745aa27a0dc35ebe52b7ee951a92/68747470733a2f2f73747265616b2d73746174732e64656d6f6c61622e636f6d2f3f757365723d6f6d703132333435267468656d653d6769746875622d6461726b"
               alt="Om-Prakash-Mishra" />
             <!-- <br />
             <br /> -->
