--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
             <a href="https://github.com/8309h/eminent-trucks-727" target="_blank" class="project-github-link"><i
               class='bx bxl-github'></i></a>
-              <a href="https://super-jalebi-b4e97f.netlify.app/" target="_blank" class="project-deployed-link"><i
+              <a href="https://super-jalebi-b4e97f.netlify.app" target="_blank" class="project-deployed-link"><i
                 class='bx bxl-netlify'></i></a>
               </div>
         </div>
@@ -315,7 +315,7 @@
         <div class="flex_icon">
           <a href="https://github.com/omp12345/movie" target="_blank" class="project-github-link"><i
             class='bx bxl-github'></i></a>
-        <a href="https://movie-3bxcjgi3h-omp12345.vercel.app/" target="_blank" class="project-deployed-link"><i
+        <a href="https://movie-3bxcjgi3h-omp12345.vercel.app" target="_blank" class="project-deployed-link"><i
             class='bx bxl-netlify'></i></a>
         </div>
    <!-- Porject 3 -->      
@@ -332,7 +332,7 @@
           <div class="flex_icon">
           <a href="https://github.com/Faheemw09/envious-cactus-6437" target="_blank" class="project-github-link"><i
             class='bx bxl-github'></i></a>
-            <a href="https://amazonn-black.vercel.app/" target="_blank" class="project-deployed-link"><i
+            <a href="https://amazonn-black.vercel.app" target="_blank" class="project-deployed-link"><i
               class='bx bxl-netlify'></i></a>
             </div>
               
@@ -350,7 +350,7 @@
          <div class="flex_icon">
            <a href="https://github.com/shivakrishnak13/sad-meat-6100/tree/main/sparkel" target="_blank" class="project-github-link"><i
             class='bx bxl-github'></i></a>
-            <a href="https://stylespot.vercel.app/" target="_blank" class="project-deployed-link"><i class='bx bxl-netlify'></i></a>
+            <a href="https://stylespot.vercel.app" target="_blank" class="project-deployed-link"><i class='bx bxl-netlify'></i></a>
           </div>
         </div>
       </div>
