--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         <img style="height: 250px;object-fit: cover;"   width="100%" src="./stylepng.png" alt="">
         <div class="project-layer">
           <h4 class="project-title">Style.in</h4>
-          <p class="p1" class="project-description">this website is useful for Buying shirt and t-shirt ,and wear clothes all this wearing materrial</p>
+          <p class="p1" class="project-description">This website is useful for Buying shirt and t-shirt ,and wear clothes all this wearing materrial.</p>
           <h5 class="project-tech-stack">HTML | CSS | react | material-Ui |</h5>
          <div class="flex_icon">
            <a href="https://github.com/shivakrishnak13/sad-meat-6100/tree/main/sparkel" target="_blank" class="project-github-link"><i
@@ -365,7 +365,7 @@
          <div class="flex_icon">
            <a href="https://github.com/omp12345/movie" target="_blank" class="project-github-link"><i
             class='bx bxl-github'></i></a>
-            <a href="https://movie-3bxcjgi3h-omp12345.vercel.app/" target="_blank" class="project-deployed-link"><i class='bx bxl-netlify'></i></a>
+            <a href="https://movie-3bxcjgi3h-omp12345.vercel.app" target="_blank" class="project-deployed-link"><i class='bx bxl-netlify'></i></a>
           </div>
         </div>
       </div> -->
