--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
       </div>
 
  <!-- Porject 4 -->
-      <div class="project-card">
+      <!-- <div class="project-card">
         <img style="height: 250px;object-fit: cover;"   width="100%" src="./stylepng.png" alt="">
         <div class="project-layer">
           <h4 class="project-title">Style.in</h4>
@@ -353,22 +353,22 @@
             <a href="https://stylespot.vercel.app" target="_blank" class="project-deployed-link"><i class='bx bxl-netlify'></i></a>
           </div>
         </div>
-      </div>
+      </div> -->
 
- <!-- Porject 5 -->
-      <!-- <div class="project-card">
+ <!-- Porject 5 --> 
+      <div class="project-card">
         <img src="./images/AI.PNG" alt="">
         <div class="project-layer">
-          <h4 class="project-title">InterviewAI</h4>
-          <p class="project-description"> Harnessing the power of AI, we provide an efficient and seamless experience for evaluating candidates' skills in these cutting-edge technologies.</p>
-          <h5 class="project-tech-stack">HTML | CSS | JavaScript | MongoDB | Express</h5>
+          <h4 class="project-title">Task-Management</h4>
+          <p class="project-description">This is Task-Management app .in this app we can mangement our task.for this i have used MERN stack </p>
+          <h5 class="project-tech-stack">React.js | CSS | node.js | MongoDB | Express</h5>
          <div class="flex_icon">
-           <a href="https://github.com/omp12345/movie" target="_blank" class="project-github-link"><i
+           <a href="https://github.com/omp12345/Task-Management" target="_blank" class="project-github-link"><i
             class='bx bxl-github'></i></a>
-            <a href="https://movie-3bxcjgi3h-omp12345.vercel.app" target="_blank" class="project-deployed-link"><i class='bx bxl-netlify'></i></a>
+            <a href="https://taskmanagement-omp12345.vercel.app/" target="_blank" class="project-deployed-link"><i class='bx bxl-netlify'></i></a>
           </div>
         </div>
-      </div> -->
+      </div>
 
 
 
