--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
       <div class="project-card">
         <img width="100%" style="height: 250px;" src="./imdbpng.png" alt="">
         <div class="project-layer">
-          <h4 class="project-title">GESRBEST</h4>
+          <h4 class="project-title">GEARBEST</h4>
           <p class="p1" class="project-description">This web app is clone of imdb movie clone where you can see all daily basic or weekly basic,and hightrating basci movie or Tv serial </p>
           <h5 class="project-tech-stack">HTML | SCSS | React.Js|redux|redux-toolkit|lazyloding</h5>
         <div class="flex_icon">
