--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <h2 class="heading"><i class='bx bx-user'></i>About
       <span>Me!</span>
       <div class="about-content">
-        <h3>I'm <span class="om">Om -Prakash-Mishra</span></h3>
+        <h3>I'm <span >Om -Prakash-Mishra</span></h3>
         <h3>Full Stack Web Developer</h3>
         <p id="user-detail-intro">
           Hello, I am Om -Prakash-Mishra, a recent graduate with a Bachelor's Engineering. I am currently undergoing training at MASAI School to pursue a career in
@@ -292,7 +292,7 @@
         <img  src="./homedcoere1.png" alt="">
         <div class="project-layer">
           <h4 class="project-title">HomeDecor-web-app</h4>
-          <p class="p1" class="project-description">You can find you daily home decoration thing like Furniture,pot,almirah all this thing .</p>
+          <p  class="project-description">You can find you daily home decoration thing like Furniture,pot,almirah all this thing .</p>
           <h5 class="project-tech-stack">HTML | CSS | JavaScript | React.Js</h5>
        
           <div class="flex_icon">
@@ -310,7 +310,7 @@
         <img width="100%" style="height: 250px;" src="./imdbpng.png" alt="">
         <div class="project-layer">
           <h4 class="project-title">GEARBEST</h4>
-          <p class="p1" class="project-description">This web app is clone of imdb movie clone where you can see all daily basic or weekly basic,and hightrating basci movie or Tv serial </p>
+          <p  class="project-description">This web app is clone of imdb movie clone where you can see all daily basic or weekly basic,and hightrating basci movie or Tv serial </p>
           <h5 class="project-tech-stack">HTML | SCSS | React.Js|redux|redux-toolkit|lazyloding</h5>
         <div class="flex_icon">
           <a href="https://github.com/omp12345/movie" target="_blank" class="project-github-link"><i
@@ -345,7 +345,7 @@
         <img style="height: 250px;object-fit: cover;"   width="100%" src="./stylepng.png" alt="">
         <div class="project-layer">
           <h4 class="project-title">Style.in</h4>
-          <p class="p1" class="project-description">This website is useful for Buying shirt and t-shirt ,and wear clothes all this wearing materrial.</p>
+          <p  class="project-description">This website is useful for Buying shirt and t-shirt ,and wear clothes all this wearing materrial.</p>
           <h5 class="project-tech-stack">HTML | CSS | react | material-Ui |</h5>
          <div class="flex_icon">
            <a href="https://github.com/shivakrishnak13/sad-meat-6100/tree/main/sparkel" target="_blank" class="project-github-link"><i
