--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <h2 class="heading"><i class='bx bx-user'></i>About
       <span>Me!</span>
       <div class="about-content">
-        <h3>I'm <span >Om -Prakash-Mishra</span></h3>
+        <h3>I'm <span class="om">Om -Prakash-Mishra</span></h3>
         <h3>Full Stack Web Developer</h3>
         <p id="user-detail-intro">
           Hello, I am Om -Prakash-Mishra, a recent graduate with a Bachelor's Engineering. I am currently undergoing training at MASAI School to pursue a career in
@@ -309,7 +309,7 @@
       <div class="project-card">
         <img width="100%" style="height: 250px;" src="./imdbpng.png" alt="">
         <div class="project-layer">
-          <h4 class="project-title">GEARBEST</h4>
+          <h4 class="project-title">GESRBEST</h4>
           <p  class="project-description">This web app is clone of imdb movie clone where you can see all daily basic or weekly basic,and hightrating basci movie or Tv serial </p>
           <h5 class="project-tech-stack">HTML | SCSS | React.Js|redux|redux-toolkit|lazyloding</h5>
         <div class="flex_icon">
@@ -325,7 +325,7 @@
         <img style="height: 250px;" width="100%" src="./amozonpng.png" alt="">
         <div class="project-layer">
           <h4 class="project-title">Amozon-clone</h4>
-          <p class="p1" class="project-description">This is Amozon clone web app .where you can buy your acceseriose and other elctronics goods and daily basic things</p>
+          <p  class="project-description">This is Amozon clone web app .where you can buy your acceseriose and other elctronics goods and daily basic things</p>
           <h5 class="project-tech-stack">react |css |redux|redux-thunk </h5>
         
           
