--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
           <p  class="project-description">This web app is clone of imdb movie clone where you can see all daily basic or weekly basic,and hightrating basci movie or Tv serial </p>
           <h5 class="project-tech-stack">HTML | SCSS | React.Js|redux|redux-toolkit|lazyloding</h5>
         <div class="flex_icon">
-          <a href="https://github.com/omp12345/movie" target="_blank" class="project-github-link"><i
+          <a href="https://super-jalebi-b4e97f.netlify.app" target="_blank" class="project-github-link"><i
             class='bx bxl-github'></i></a>
         <a href="https://movie-3bxcjgi3h-omp12345.vercel.app" target="_blank" class="project-deployed-link"><i
             class='bx bxl-netlify'></i></a>
@@ -423,10 +423,7 @@
   <!-- 
 
 
- -->
-  <!------------------------------------------------------------- GitHub ends ----------------------------------------------------------------->
-
-  <!-------------------------------------------------------------  Contacts Starts --------------------------------------------------------------->
+  -----------------------------------------------------------  Contacts Starts --------------------------------------------------------------->
 
   <div id="contact">
     <h2 class="heading">Contact
@@ -460,9 +457,6 @@
 
   
 
-  <!--------------------------------------------  Contacts Ends --------------------------------------------------------------->
-
-
   <!-- ------------------------------------------  Footer Starts- ---------------------------------------------------------- -->
 
 
@@ -479,17 +473,18 @@
   <!-- ------------------------------------------  Footer Ends ------------------------------------------------------------- -->
 
 
-  <!-- scrollreveal -->
+  
 
   <script src="https://unpkg.com/scrollreveal"></script>
 
-  <!-- Typed js -->
+
   <script src="https://unpkg.com/typed.js@2.0.132/dist/typed.umd.js"></script>
 
-  <!-- Main Script -->
-  <script src="script.js"></script>
+ 
+
 
 
 </body>
+<script src="script.js"></script>
 
 </html>
