--- a/index.html
+++ b/index.html
@@ -400,19 +400,19 @@
         <div class="stats">
           <a href="https://github.com/omp12345">
             <img   id="github-streak-stats"
-              src="https://github-readme-streak-stats.herokuapp.com/?user=omp12345&theme=black-ice&hide_border=true&stroke=0000&background=060A0CD0"
+              src="https://github-readme-streak-stats.herokuapp.com?user=omp12345&theme=dark"
               alt="Om-Prakash-Mishra" />
             <!-- <br />
             <br /> -->
 
             <img   id="github-stats-card"
-              src="https://github-readme-stats.vercel.app/api?username=omp12345&include_all_commits=true&count_private=true&show_icons=true&line_height=20&title_color=7A7ADB&icon_color=2234AE&text_color=D3D3D3&bg_color=0,000000,130F40" />
+              src="https://github-readme-stats.vercel.app/api?username=omp12345&count_private=true&show_icons=true&theme=dark" />
 <!-- 
             <br />
             <br /> -->
 
             <img 
-              src="https://github-readme-stats.vercel.app/api/top-langs?username=omp12345&show_icons=true&locale=en&layout=compact&theme=react&hide_border=true&bg_color=0D1117"
+              src="https://github-readme-stats.vercel.app/api/top-langs/?username=omp12345&layout=compact&theme=dark"
               id="github-top-langs" />
           </a>
         </div>
