--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     content="Hey Hii ! I'm Om Prakash Mishra & this is my portfolio profile, kindly go through my portfolio if you are a recruiter and looking for a passionate Full Stack Developer or Backend Developer  please feel free to contact me." />
 
   <!-- Github Calender -->
-  <!-- <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script> -->
+  <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
 
   <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css" /><!-- 
 
