--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         <div class="flex_icon">
           <a href="https://github.com/omp12345/movie" target="_blank" class="project-github-link"><i
             class='bx bxl-github'></i></a>
-        <a href="https://super-jalebi-b4e97f.netlify.app" target="_blank" class="project-deployed-link"><i
+        <a href="https://movie-one-xi.vercel.app/" target="_blank" class="project-deployed-link"><i
             class='bx bxl-netlify'></i></a>
         </div>
    <!-- Porject 3 -->      
