--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 
       <div class="calender">
         <div class="calenderimg">
-          <img src="https://ghchart.rshah.org/omp12345" alt="">
+          Loading the data just for you.
         </div>
         <!-- <br /> -->
       
