--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <title>Om-Prakash-Mishra-Portfolio</title>
   <meta name="title" content="Om Prakash Mishra - Portfolio" />
   
-  
   <meta name="description"
     content="Hey Hii ! I'm Om Prakash Mishra & this is my portfolio profile, kindly go through my portfolio if you are a recruiter and looking for a passionate Full Stack Developer or Backend Developer  please feel free to contact me." />
 
@@ -311,7 +310,7 @@
       <div class="project-card">
         <img width="100%" style="height: 250px;" src="./imdbpng.png" alt="">
         <div class="project-layer">
-          <h4 class="project-title">GESRBEST</h4>
+          <h4 class="project-title">GEARBEST</h4>
           <p  class="project-description">This web app is clone of imdb movie clone where you can see all daily basic or weekly basic,and hightrating basci movie or Tv serial </p>
           <h5 class="project-tech-stack">HTML | SCSS | React.Js|redux|redux-toolkit|lazyloding</h5>
         <div class="flex_icon">
@@ -394,7 +393,7 @@
 
       <div class="calender">
         <div class="calenderimg">
-          Loading the data just for you.
+          <img src="https://ghchart.rshah.org/omp12345" alt="">
         </div>
         <!-- <br /> -->
       
