--- a/index.html
+++ b/index.html
@@ -391,9 +391,11 @@
     </h2>
     <div class="container">
 
-      <div class="calender">
-        <div class="calenderimg">
-          <img src="https://ghchart.rshah.org/omp12345" alt="">
+        <div id="calendar">
+            <div class="react-activity-calendar calendar">
+                <!-- Loading stuff -->
+                Loading the data just for you.
+            </div>
         </div>
         <!-- <br /> -->
       
