--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
     </h2>
     <div class="container">
 
-        <div id="calendar">
+        <div class="react-activity-calendar">
             
                 <!-- Loading stuff -->
                 <img width="100%" src="https://ghchart.rshah.org/omp12345" alt="">
