--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 
         <div class="react-activity-calendar">
           <div class="calenderimg">
-            <img width="100%" src="https://ghchart.rshah.org/omp12345" alt="">
+            <img src="https://ghchart.rshah.org/omp12345" alt="">
           </div>
             
                
